--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -221,6 +221,57 @@ input {
     }
 }
 
+.phone-banner {
+    position: fixed;
+    top: 0;
+    left: 50%;
+    background: url('/img/phone-banner-bg.png') no-repeat;
+    -webkit-background-size: cover;
+    background-size: cover;
+    z-index: 100;
+    height: 120px;
+    width: 50vw;
+    display: flex;
+    align-items: center;
+    transform: translateX(100%);
+    transition: transform .3s;
+
+    &.fixed {
+        transform: translateX(0);
+    }
+
+    &__title {
+        font-size: 30px ;
+        font-weight: 500;
+        color: #1e1e1e;
+        margin-left: 77px;
+        margin-right: 30px;
+    }
+
+    .btn-phone {
+        background: url('/img/phone-banner-bg-2.png') no-repeat;
+        -webkit-background-size: cover;
+        background-size: cover;
+        font-size: 30px;
+        color: #b7292b;
+        text-shadow: 0 0 7px rgba(255, 255, 255, 0.75);
+        font-weight: bold;
+        padding: 19px 15px 20px 15px;
+        height: 62px;
+        display: flex;
+        align-items: center;
+        transition: color .3s;
+
+        &:hover {
+            color: darken(#b7292b , 10%);
+        }
+
+    }
+
+
+
+}
+
 .hero {
     background: #000;
     color: #fff;
