--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -230,7 +230,7 @@ input {
     position: fixed;
     top: 0;
     left: 50%;
-    background: url('/img/phone-banner-bg.png') no-repeat;
+    background: url('../img/phone-banner-bg.png') no-repeat;
     -webkit-background-size: cover;
     background-size: cover;
     z-index: 100;
